--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <div class="w3-container">
 <h5 class="w3-opacity"><b>Perguruan Tinggi</b></h5>
 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2021 - Sekarang</h6>
-<p>S1 Teknik Informatika Universitas Halu Oleo</p>
+<p>S1 Teknik Informatika Universitas Halu Oleo</p><br>
 </div>
 </div>
 
