--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <div class="w3-display-container">
 <img src="images.png" style="width:100%" alt="Avatar">
 <div class="w3-display-bottomleft w3-container">
-<   h2   > RICKY ARYANSAH < /  h2  >
-</  di >
+<h2>MUH. RICKY ARYANSAH</h2>
+</div>
 </div>
 <div class="w3-container">
 <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Mahasiswa</p>
@@ -95,7 +95,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <div class="w3-container">
 <h5 class="w3-opacity"><b>Juara 3 Lomba Essay Competition Of Chemistry (COMIC)</b></h5>
 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oktober 2020</h6>
-<p>Lomba ini merupakan lomba essay yang diadakan oleh Jurusan Kimia Fakultas Matematika dan Ilmu Pengetahuan Alam (FMIPA) Universitas Halu Oleo. Lomba ini diikuti oleh seluruh pelajar lingkup Sulawesi Tenggara (SULTRA). </p><br>
+<p>Lomba ini merupakan lomba essay yang diadakan oleh Jurusan Kimia Fakultas Matematika dan Ilmu Pengetahuan Alam (FMIPA) Universitas Halu Oleo. Lomba ini diikuti oleh pelajar lingkup Sulawesi Tenggara (SULTRA). </p><br>
 </div>
 </div>
 
@@ -122,7 +122,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <div class="w3-container">
 <h5 class="w3-opacity"><b>Perguruan Tinggi</b></h5>
 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2021 - Sekarang</h6>
-<p>S1 Teknik Informatika Universitas Halu Oleo</p><br>
+<p>S1 Teknik Informatika Universitas Halu Oleo (UHO)</p>
+<div class="w3-end-line"></div><br>
 </div>
 </div>
 
@@ -134,5 +135,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- End Page Container -->
 </div>
+
+<footer class="w3-container w3-teal w3-center w3-margin-top"></footer>
+
 </body>
 </html>
